; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_route.c_add_route3.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_route.c_add_route3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tuntap = type { i32 }
%struct.route_gateway_info = type { i32 }
%struct.env_set = type { i32 }
%struct.route_ipv4 = type { i8*, i8*, i8*, i32 }

@RT_DEFINED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i8*, %struct.tuntap*, i32, %struct.route_gateway_info*, %struct.env_set*, i32*)* @add_route3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_route3(i8* %0, i8* %1, i8* %2, %struct.tuntap* %3, i32 %4, %struct.route_gateway_info* %5, %struct.env_set* %6, i32* %7) #0 {
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca %struct.tuntap*, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.route_gateway_info*, align 8
  %15 = alloca %struct.env_set*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca %struct.route_ipv4, align 8
  store i8* %0, i8** %9, align 8
  store i8* %1, i8** %10, align 8
  store i8* %2, i8** %11, align 8
  store %struct.tuntap* %3, %struct.tuntap** %12, align 8
  store i32 %4, i32* %13, align 4
  store %struct.route_gateway_info* %5, %struct.route_gateway_info** %14, align 8
  store %struct.env_set* %6, %struct.env_set** %15, align 8
  store i32* %7, i32** %16, align 8
  %18 = call i32 @CLEAR(%struct.route_ipv4* byval(%struct.route_ipv4) align 8 %17)
  %19 = load i32, i32* @RT_DEFINED, align 4
  %20 = getelementptr inbounds %struct.route_ipv4, %struct.route_ipv4* %17, i32 0, i32 3
  store i32 %19, i32* %20, align 8
  %21 = load i8*, i8** %9, align 8
  %22 = getelementptr inbounds %struct.route_ipv4, %struct.route_ipv4* %17, i32 0, i32 2
  store i8* %21, i8** %22, align 8
  %23 = load i8*, i8** %10, align 8
  %24 = getelementptr inbounds %struct.route_ipv4, %struct.route_ipv4* %17, i32 0, i32 1
  store i8* %23, i8** %24, align 8
  %25 = load i8*, i8** %11, align 8
  %26 = getelementptr inbounds %struct.route_ipv4, %struct.route_ipv4* %17, i32 0, i32 0
  store i8* %25, i8** %26, align 8
  %27 = load %struct.tuntap*, %struct.tuntap** %12, align 8
  %28 = load i32, i32* %13, align 4
  %29 = load %struct.route_gateway_info*, %struct.route_gateway_info** %14, align 8
  %30 = load %struct.env_set*, %struct.env_set** %15, align 8
  %31 = load i32*, i32** %16, align 8
  %32 = call i32 @add_route(%struct.route_ipv4* %17, %struct.tuntap* %27, i32 %28, %struct.route_gateway_info* %29, %struct.env_set* %30, i32* %31)
  ret void
}

declare dso_local i32 @CLEAR(%struct.route_ipv4* byval(%struct.route_ipv4) align 8) #1

declare dso_local i32 @add_route(%struct.route_ipv4*, %struct.tuntap*, i32, %struct.route_gateway_info*, %struct.env_set*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
